0.0.6.0/ivy/_sources/docs/functional/ivy/experimental/ivy.functional.ivy.experimental.creation.rst.txt
Creation
========


.. autosummary::
   :toctree: creation
   :template: functional_module.rst
   :hide-table:
   :recursive:

   
   
   
   ivy.functional.ivy.experimental.creation.blackman_window
   
   
   ivy.functional.ivy.experimental.creation.eye_like
   
   
   ivy.functional.ivy.experimental.creation.hamming_window
   
   
   ivy.functional.ivy.experimental.creation.hann_window
   
   
   ivy.functional.ivy.experimental.creation.indices
   
   
   ivy.functional.ivy.experimental.creation.kaiser_bessel_derived_window
   
   
   ivy.functional.ivy.experimental.creation.kaiser_window
   
   
   ivy.functional.ivy.experimental.creation.mel_weight_matrix
   
   
   ivy.functional.ivy.experimental.creation.ndenumerate
   
   
   ivy.functional.ivy.experimental.creation.ndindex
   
   
   ivy.functional.ivy.experimental.creation.polyval
   
   
   ivy.functional.ivy.experimental.creation.random_cp
   
   
   ivy.functional.ivy.experimental.creation.random_parafac2
   
   
   ivy.functional.ivy.experimental.creation.random_tr
   
   
   ivy.functional.ivy.experimental.creation.random_tt
   
   
   ivy.functional.ivy.experimental.creation.random_tucker
   
   
   ivy.functional.ivy.experimental.creation.tril_indices
   
   
   ivy.functional.ivy.experimental.creation.trilu
   
   
   ivy.functional.ivy.experimental.creation.unsorted_segment_mean
   
   
   ivy.functional.ivy.experimental.creation.unsorted_segment_min
   
   
   ivy.functional.ivy.experimental.creation.unsorted_segment_sum
   
   
   ivy.functional.ivy.experimental.creation.vorbis_window
   




.. automodule:: ivy.functional.ivy.experimental.creation
   :special-members: __init__
   :show-inheritance:




.. autofunction:: ivy._check_first_and_last_rank_elements_are_equal

.. autofunction:: ivy._iter_product

.. autofunction:: ivy.blackman_window

.. autofunction:: ivy.eye_like

.. autofunction:: ivy.hamming_window

.. autofunction:: ivy.hann_window

.. autofunction:: ivy.indices

.. autofunction:: ivy.kaiser_bessel_derived_window

.. autofunction:: ivy.kaiser_window

.. autofunction:: ivy.mel_weight_matrix

.. autofunction:: ivy.ndenumerate

.. autofunction:: ivy.ndindex

.. autofunction:: ivy.polyval

.. autofunction:: ivy.random_cp

.. autofunction:: ivy.random_parafac2

.. autofunction:: ivy.random_tr

.. autofunction:: ivy.random_tt

.. autofunction:: ivy.random_tucker

.. autofunction:: ivy.tril_indices

.. autofunction:: ivy.trilu

.. autofunction:: ivy.unsorted_segment_mean

.. autofunction:: ivy.unsorted_segment_min

.. autofunction:: ivy.unsorted_segment_sum

.. autofunction:: ivy.vorbis_window







.. discussion-links:: ivy.functional.ivy.experimental.creation